--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,11 @@
 apt-get update && apt-get install -y libgl1-mesa-glx
+
+services:
+  - type: web
+    name: klasifikasi-ras-kucing
+    env: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
+    envVars:
+      - key: PORT
+        value: 10000
